fix: remove align center div class

--- a/src/app/admin/products/products/product-form/product-form.component.css
+++ b/src/app/admin/products/products/product-form/product-form.component.css
@@ -31,14 +31,6 @@ mat-label {
   margin-top: 0.65rem;
 }
 
-.align-center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 mat-form-field {
   width: 30rem;
 }
